# neon-vs-node-ffi-napi

./: .clang-format  .gitignore  Cargo.toml  README.md  index.js  package.json
native/: Cargo.toml  build.rs
native/src/: lib.rs
workspace.rs/backend/: Cargo.toml
workspace.rs/backend/src/: lib.rs
